[package]
name = "freezable-macro"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
freezable = { version = "0.1.0", path = "../freezable"}
proc-macro2 = "1.0.40"
quote = "1.0.20"
syn = { version = "1.0.98", features = ["full"] }

[lib]
proc-macro = true
